# sobottaai

./: .gitignore  CLAUDE.md  LICENSE  README.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml  release.yml
docs/: release-ci-runbook.md
scripts/: bump-version.sh
sobotta-website/: package.json  pnpm-lock.yaml
sobotta-website/app/: globals.css  layout.tsx  page.tsx
sobotta-website/public/: robots.txt
src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: capture.rs  mod.rs  processing.rs  wav.rs
src-tauri/src/commands/: ai_functions.rs  audio_import.rs  clipboard.rs  history.rs  mod.rs  models.rs  recording.rs  settings.rs  transcription.rs  vocabulary.rs
src-tauri/src/db/: ai_functions.rs  history.rs  mod.rs  settings.rs  vocabulary.rs
src-tauri/src/llm/: anthropic.rs  groq.rs  mod.rs  ollama.rs  openai.rs
src-tauri/src/models/: mod.rs  parakeet_models.rs  whisper_models.rs  whisper_onnx_models.rs
src-tauri/src/rules/: filler.rs  grammar.rs  mod.rs  punctuation.rs
src-tauri/src/stt/: cloud_groq.rs  cloud_openai.rs  mod.rs  parakeet.rs  whisper.rs  whisper_onnx.rs
src-tauri/src/system/: autostart.rs  hotkey.rs  mod.rs  paste.rs  tray.rs
src/__tests__/: hotkeys.test.ts  record-button.test.tsx  recording-store.test.ts  settings-store.test.ts  setup.ts  tauri-commands.test.ts  utils.test.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: ai-function-picker.tsx  app-shell.tsx  combobox-picker.tsx  language-selector.tsx  model-selector.tsx  onboarding.tsx  quick-settings.tsx  record-button.tsx  recording-bar.tsx  recording-pipeline.tsx  theme-sync.tsx  titlebar.tsx  tray-sync.tsx
src/hooks/: use-recording.ts
src/lib/: hotkey-utils.ts  tauri-commands.ts
src/stores/: recording-store.ts  (+1 more)
(+26 files in other folders)
