[package]
name = "sobottaai"
version = "0.1.0"
description = "Open-source cross-platform voice-to-text with local AI"
authors = ["SobottaAI Contributors"]
license = "MIT"
repository = "https://github.com/dotyigit/sobottaai"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "sobottaai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"

# Audio capture and processing
cpal = "0.15"
hound = "3.5"

# Keyboard simulation for auto-paste
enigo = "0.3"

# Speech-to-text: sherpa-onnx transducer (Parakeet models)
sherpa-rs = { git = "https://github.com/thewh1teagle/sherpa-rs", branch = "main", features = ["download-binaries"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# HTTP client for cloud APIs
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
log = "0.4"
thiserror = "2"
anyhow = "1"
regex = "1"
once_cell = "1"
futures-util = "0.3"
async-trait = "0.1"

# Speech-to-text: Metal GPU acceleration on macOS, plain CPU elsewhere
[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.15", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
whisper-rs = "0.15"
